[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.0.0"
load_file = "1.0.1"
clap = { version = "4.0.29", features = ["derive"] }
impl_ops = "0.1.1"
itertools = "0.10.5"
